修改项目部署脚本。